# NICE

cpp/: CMakeLists.txt
cpp/include/: cpu_operations.h  gpu_kmeans.h  gpu_operations.h  gpu_svd_solver.h  gpu_util.h  kmcuda.h  kmeans_kernels.cuh  kmeans_kernels.h  private.h  wrappers.h
cpp/src/: kmcuda.cc  python.cc
cpp/src/kernel/: collin_kmeans_kernel.temp  kernel.cu  kmeans_kernels.cu  kmeans_kernels.temp
cpp/src/util/: gpu_util.cc
cpp/test/cpu_operations_test/: gen_degree_matrix_test.cc  gen_kernel_matrix_test.cc  rank_test.cc
cpp/test/data_for_test/: data_k5_p5_d5_c5.txt  genData.py
cpp/test/gpu_kmeans_test/: gpu_kmeans_test.cc
cpp/test/util_test/: from_file_test.cc
